# hello-wss

./: Cargo.toml  README.md  justfile
scripts/: generate-certificate
src/: main.rs
