[package]
name = "hello-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
rustls-pemfile = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
tokio-tungstenite = { version = "0.18", features = ["__rustls-tls", "connect"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
