[package]
name = "hello-wss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
native-tls = { version = "0.2", features = ["vendored"] }
obfstr = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = { version = "0.3", features = ["vendored"] }
tokio-tungstenite = { version = "0.18", features = ["connect", "native-tls-vendored"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
